# amr_firmware

./: .gitmodules
amr/ESCBoard/: CMakeLists.txt
amr/ESCBoard/include/: controller.h  core1.h  ir.h  ros.h
amr/ESCBoard/src/: controller.c  core1.c  ir.c  main.c  ros.c
amr/PowerBoard/: CMakeLists.txt
amr/PowerBoard/include/: ros.h  safety_interface.h
amr/PowerBoard/src/: main.c  ros.c  safety_interface.c
amr/PowerBoard2/: CMakeLists.txt
amr/PowerBoard2/include/: ros.h
amr/PowerBoard2/src/: main.c  ros.c
amr/amr_pico/: CMakeLists.txt
amr/amr_pico/src/: esc.h  main.c  ros.c
amr/pico_encoder/: CMakeLists.txt
amr/pico_encoder/src/: main.c
amr/pico_esc/: CMakeLists.txt
amr/pico_esc/include/: ros.h
amr/pico_esc/src/: main.c
amr/pico_esc2/: CMakeLists.txt
amr/pico_esc2/src/: main.c
amr/pico_sensors/: CMakeLists.txt
amr/pico_sensors/src/: main.c
examples/micro_ros_template/: CMakeLists.txt
examples/micro_ros_template/include/: ros.h
examples/micro_ros_template/src/: main.c  ros.c
lib/: CMakeLists.txt
lib/driver_cd74hc4051/: CMakeLists.txt  cd74hc4051.c
lib/driver_cd74hc4051/include/driver/: cd74hc4051.h
lib/driver_drv8313/: CMakeLists.txt
lib/driver_drv8313/include/: bldc_driver_3pwm.h  bldc_motor.h  fixedptc.h  hardware_api.h  rp2040_mcu.h
lib/driver_drv8313/include/driver/: drv8313.h
lib/driver_drv8313/src/: bldc_driver_3pwm.c  bldc_motor.c  rp2040_mcu.c
lib/driver_encoder/: CMakeLists.txt  quad_encoder.c
lib/driver_encoder/include/driver/: quad_encoder.h
lib/driver_encoder/src/: quad_encoder.c
lib/driver_mfrc522/: CMakeLists.txt  mfrc522.c
lib/driver_mfrc522/include/driver/: mfrc522.h
lib/driver_pio_spi/: CMakeLists.txt
lib/driver_pio_spi/include/driver/: pio_spi.h
lib/driver_pio_spi/src/: pio_spi.c  spi.pio
lib/driver_rfid/: CMakeLists.txt  mfrc522.c
lib/driver_thermistor/: CMakeLists.txt  thermistor.c
lib/micro_ros_pico/: libmicroros.tar.xz
lib/titan_boards/: titan_boards.cmake
puddles/Backplane/src/: ros.c  safety_interface.c
talos/Actuator/include/: actuators.h
talos/CameraCageBB/src/: ros.c
talos/ESCBoard/src/: ros.c
talos/LEDBoard/src/: ros.c
talos/PoacBoard/include/: actuators.h
talos/PoacBoard/src/: safety_interface.c
talos/PowerBoard/src/: ros.c  safety_interface.c
talos/SmartBattery/src/: ros.c
tools/: DeviceList.jsonc  archive.sh
tools/lib/canmore_dbg_cpp/: CMakeLists.txt
(+27 files in other folders)
